tests/typechecker/should_pass/symmetry.csp
datatype T = X
assert STOP :[symmetric]: T
