tests/typechecker/should_fail/symmetry2.csp
datatype T1 = C1 | C2
datatype T2 = X1 | X2

assert T1 :[symmetric]: diff(T1, {| X1 |})
